html new creation

--- a/src/event.html
+++ b/src/event.html
@@ -55,72 +55,66 @@
         </section>
     </header>
     <main>
-        <section class="flex_profile">
-            <article>
-                <div>
-                    <h3 class="home_title">Personal Information</h3>
-                </div>
-                <div>
-                    <div class="div_inline">
-                        <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
-                    </div>
-                    <div class="div_inline">
-                        <a href="./index.html"><h3 class="logout_profile">LOG OUT</h3></a>
-                    </div>
-                </div>
-                <div class="flex_profile_info">
-                    <div class="profile_info_theme">
-                        <h3>Name</h3>
-                        <h3>Surnames</h3>
-                        <h3>Email</h3>
-                        <h3>Password</h3>
-                    </div>
-                    <div class="profile_info_theme_input">
-                        <h3>Tom</h3>
-                        <h3>Stanley Holland</h3>
-                        <h3>tom@openevents.com</h3>
-                        <h3>asdfgh</h3>
-                    </div>
-                </div>
-                <div class="flex_edit_buttons">
-                    <div>
-                        <div class="div_inline"><a href="./profile.html"><img class="edit_profile_img" src="./media/images/icons/edit_icon.png" alt="Edit Icon"></a></div>
-                        <div class="div_inline"><a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a></div>
-                    </div>
-                    <div>
-                        <a href="./profile.html"><h3 class="done_profile">DONE</h3></a>
-                    </div>
-                </div>
+        <section class="flex_event">
+            <article class="rc_bkg">
+                <h3 class="event_title">Annual Wonderland</h3>
             </article>
             <article>
                 <div>
-                    <h3 class="home_title">Your Statistics</h3>
+                    <h3 class="home_title">Description</h3>
                 </div>
-                <h3 class="score_profile">Score</h3>
                 <div>
-                    <div class="star-container">
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                        <div class="star"></div>
-                    </div>
-                </div>
-                <div class="comments_profile">
-                    <h3>users % with less comments </h3>
-                    <h3 class="users_profile">30</h3>
-                </div>
-                <div class="divisor_color"></div>
-                <div>
-                    <a href="./delete.html"><h3 class="delete_profile">DELETE ACCOUNT</h3></a>
+                    <p class="margins">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tortor eu quam dignissim, et fringilla ante egestas. Aenean elementum elementum metus, eget condimentum eros finibus non. Proin finibus, ex eget ultrices egestas, augue neque egestas turpis, non imperdiet eros orci quis mauris. Donec eget vulputate mauris. Nullam faucibus consequat mattis. Duis vitae turpis a sem lobortis vestibulum at ac libero.
+                    </p>
                 </div>
             </article>
+            <div>
+                <h3 class="home_title">Details</h3>
+            </div>
+            <article class="flex_details">
+                <div>
+                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/location_icon.png" alt="Location Icon"></div>
+                    <div class="div_inline"><h3 class="bottom_padding">Location: Barcelona</h3></div>
+                </div>
+                <div>
+                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/calendar_icon.png" alt="Location Icon"></div>
+                    <div class="div_inline"><h3>Dates: 10 Mar, 2022 - 12 Mar, 2022</h3></div>
+                </div>
+                <div>
+                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/group_icon.png" alt="Location Icon"></div>
+                    <div class="div_inline"><h3>Max. participants: 500</h3></div>
+                </div>
+                <div>
+                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/category_icon.png" alt="Location Icon"></div>
+                    <div class="div_inline"><h3>Category: music</h3></div>
+                </div>
+                <div>
+                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/person_icon.png" alt="Location Icon"></div>
+                    <div class="div_inline"><h3>Creator: Luca</h3></div>
+                </div>
+            </article>
+            <article>
+                <h3 class="flex_details">Creator Score</h3>
+                <div class="star-container bottom_margin">
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                    <div class="star"></div>
+                </div>
+            </article>
+        </section>
+        <section class="event_buttons_margin">
+            <div class="event_buttons"><a  href="./event.html">Participate!</a></div>
+            <div class="event_buttons"><a href="./event.html">Share!</a></div>
         </section>
     </main>
     <footer class="flex_footer">
         <section class="inlineNav">
             <div>
                 <h4 class="white">OpenEvents</h4>
+
             </div>
             <div>
                 <nav>
