--- a/src/home.html
+++ b/src/home.html
@@ -30,7 +30,7 @@
                                 alt="events icon"
                             />
                         </a>
-                        <a href="/src/friends.html">
+                        <a href="./friends.html">
                             <img
                                 src="./media/images/icons/friends_icon.png"
                                 alt="friends icon"
@@ -53,10 +53,9 @@
             </article>
         </section>
     </header>
-
     <main>
-        <section class="flex_home">
-            <article>
+        <section>
+            <article class="flex_home">
                 <div>
                     <h3 class="home_title">What are you up to?</h3>
                 </div>
@@ -71,7 +70,6 @@
             </article>
         </section>
     </main>
-
     <footer class="flex_footer">
         <section class="inlineNav">
             <div>
