--- a/src/privacy.html
+++ b/src/privacy.html
@@ -30,7 +30,7 @@
                             alt="events icon"
                         />
                     </a>
-                    <a href="/src/friends.html">
+                    <a href="./friends.html"">
                         <img
                             src="./media/images/icons/friends_icon.png"
                             alt="friends icon"
