events list implementation (not finished)

--- a/src/events.html
+++ b/src/events.html
@@ -55,19 +55,22 @@
     </header>
 
     <main>
-        <h3>Discover Events</h3>
         <section class="events_general_flex">
-            <article class="first_buttons">
-                <a href="./terms.html"><h5>List MY EVENTS</h5></a>
-                <a href="./eventology.html"><h5>Visit your EVENTOLOGY</h5></a>
+            <h2>Discover Events</h2>
+            <article class="my_events_button">
+                <a href="./terms.html">List MY EVENTS</a>
+                <a href="./eventology.html">Visit your EVENTOLOGY</a>
             </article>
-            <article>
-                <a href="./terms.html"><h5>TRENDING</h5></a>
-                <a href="./terms.html"><h5>MUSIC</h5></a>
-                <a href="./terms.html"><h5>EDUCATION</h5></a>
+            <article class="categories_buttons">
+                <a href="./terms.html">TRENDING</a>
+                <a href="./terms.html">MUSIC</a>
+                <a href="./terms.html">EDUCATION</a>
+                <a href="./terms.html">SPORTS</a>
             </article>
+        </section>
+        <section class="filters">
             <article>
-                <a href="./events.html"><h5>show more categories</h5></a>
+                <a class="show_categories" href="./events.html">show more categories</a>
                 <a href="./profile.html">
                     <img
                         src="./media/images/icons/settings_icon.png"
@@ -76,15 +79,36 @@
                     />
                 </a>
             </article>
-
-            <article>
-                <div>
-                    <h4>Are you an Eventer? </h4>
-                </div>
-
-            </article>
-
         </section>
+        <section>
+            <article>
+                <div class="box_eventer">
+                    <h5>Are you an eventer?</h5>
+                    <h5>Create your event now!</h5>
+                    <a href=""><h4 class="button_create_event">Create an event</h4></a>
+                </div>
+            </article>
+        </section>
+        <section class="events_list">
+            <div><img src="./media/images/events/gig_event.jpg" alt="concert_image" width="400"></div>
+            <h3>Annual Wonderland</h3>
+            <article class="events_details">
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <ul class="">
+                        <li>Location: </li>
+                        <li>Start date: </li>
+                        <li>Max participants: </li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+
+
 
 
     </main>
