events list finished (mobile)

--- a/src/events.html
+++ b/src/events.html
@@ -62,10 +62,10 @@
                 <a href="./eventology.html">Visit your EVENTOLOGY</a>
             </article>
             <article class="categories_buttons">
-                <a href="./terms.html">TRENDING</a>
-                <a href="./terms.html">MUSIC</a>
-                <a href="./terms.html">EDUCATION</a>
-                <a href="./terms.html">SPORTS</a>
+                <a href="./events.html">TRENDING</a>
+                <a href="./events.html">MUSIC</a>
+                <a href="./events.html">EDUCATION</a>
+                <a href="./events.html">SPORTS</a>
             </article>
         </section>
         <section class="filters">
@@ -90,26 +90,40 @@
             </article>
         </section>
         <section class="events_list">
-            <div><img src="./media/images/events/gig_event.jpg" alt="concert_image" width="400"></div>
-            <h3>Annual Wonderland</h3>
             <article class="events_details">
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                </div>
-                <div>
-                    <ul class="">
-                        <li>Location: </li>
-                        <li>Start date: </li>
-                        <li>Max participants: </li>
+                <a href="./event.html">
+                    <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
+                    <h3 class="event_title_box">Annual Wonderland</h3>
+                    <ul>
+                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
                     </ul>
-                </div>
+                </a>
+            </article>
+            <article class="events_details">
+                <a href="./event.html">
+                    <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
+                    <h3 class="event_title_box">Annual Wonderland</h3>
+                    <ul class="">
+                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                    </ul>
+                </a>
+            </article>
+            <article class="events_details">
+                <a href="./event.html">
+                    <div><img class="img_events" src="./media/images/events/gig_event.jpg" alt="concert_image"></div>
+                    <h3 class="event_title_box">Annual Wonderland</h3>
+                    <ul class="">
+                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                    </ul>
+                </a>
             </article>
         </section>
-
-
-
 
     </main>
 
