events list finished (mobile), create an event form and html

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                 <h3>Do you want to create an account?</h3>
             </article>
             <article class="flex_signup">
-                <form class="indexInput, input_box">
+                <form class="input_box">
                     <input type="text" id="name" name="name" required
                            minlength="1" maxlength="50" size="10" placeholder="name" />
                     <input type="text" id="lastname" name="lastname" required
