--- a/src/event.html
+++ b/src/event.html
@@ -54,7 +54,7 @@
             </article>
         </section>
     </header>
-    <main>
+    <main class="margins">
         <section class="flex_event">
             <article class="rc_bkg">
                 <h3 class="event_title">Annual Wonderland</h3>
@@ -106,7 +106,7 @@
             </article>
         </section>
         <section class="event_buttons_margin">
-            <div class="event_buttons"><a  href="./event.html">Participate!</a></div>
+            <div class="event_buttons_participate"><a  href="./event.html">Participate!</a></div>
             <div class="event_buttons"><a href="./event.html">Share!</a></div>
         </section>
     </main>
