--- a/src/events.html
+++ b/src/events.html
@@ -55,76 +55,93 @@
     </header>
 
     <main>
+        <h2>Discover Events</h2>
+        <section class="categories_buttons">
+            <a href="./events.html">TRENDING</a>
+            <a href="./events.html">MUSIC</a>
+            <a href="./events.html">EDUCATION</a>
+            <a href="./events.html">SPORTS</a>
+        </section>
         <section class="events_general_flex">
-            <h2>Discover Events</h2>
-            <article class="my_events_button">
-                <a href="./terms.html">List MY EVENTS</a>
-                <a href="./eventology.html">Visit your EVENTOLOGY</a>
-            </article>
-            <article class="categories_buttons">
-                <a href="./events.html">TRENDING</a>
-                <a href="./events.html">MUSIC</a>
-                <a href="./events.html">EDUCATION</a>
-                <a href="./events.html">SPORTS</a>
-            </article>
-        </section>
-        <section class="filters">
-            <article>
-                <a class="show_categories" href="./events.html">show more categories</a>
-                <a href="./profile.html">
-                    <img
-                        src="./media/images/icons/settings_icon.png"
-                        alt="settings icon"
-                        width="50"
-                    />
-                </a>
-            </article>
-        </section>
-        <section>
-            <article>
+            <article class="margins">
+                <div class="my_events_button">
+                    <a href="./terms.html">List MY EVENTS</a>
+                    <a href="./eventology.html">Visit your EVENTOLOGY</a>
+                </div>
+                <div class="filters">
+                    <a class="show_categories" href="./events.html">show more categories</a>
+                    <a  class="filters_icon" href="./profile.html">
+                        <img
+                            src="./media/images/icons/settings_icon.png"
+                            alt="settings icon"
+                            width="50"
+                        />
+                    </a>
+                </div>
                 <div class="box_eventer">
                     <h5>Are you an eventer?</h5>
                     <h5>Create your event now!</h5>
-                    <a href=""><h4 class="button_create_event">Create an event</h4></a>
+                    <a href="./create_event.html"><h4 class="button_create_event">Create an event</h4></a>
+                </div>
+            </article>
+            <article class="events_list">
+                <div class="events_details">
+                    <a href="./event.html">
+                        <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
+                        <h3 class="event_title_box">Annual Wonderland</h3>
+                        <ul>
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                        </ul>
+                    </a>
+                </div>
+                <div class="events_details">
+                    <a href="./event.html">
+                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
+                        <h3 class="event_title_box">Eat Fest</h3>
+                        <ul class="">
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 1000</li>
+                        </ul>
+                    </a>
+                </div>
+                <div class="events_details">
+                    <a href="./event.html">
+                        <div><img class="img_events" src="./media/images/events/gig_event.jpg" alt="concert_image"></div>
+                        <h3 class="event_title_box">NightMade music festival</h3>
+                        <ul class="">
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 June, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 200</li>
+                        </ul>
+                    </a>
+                </div>
+                <div class="events_details">
+                    <a href="./event.html">
+                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
+                        <h3 class="event_title_box">Eat Fest</h3>
+                        <ul class="">
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 1000</li>
+                        </ul>
+                    </a>
+                </div>
+                <div class="events_details">
+                    <a href="./event.html">
+                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
+                        <h3 class="event_title_box">Eat Fest</h3>
+                        <ul class="">
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 1000</li>
+                        </ul>
+                    </a>
                 </div>
             </article>
         </section>
-        <section class="events_list">
-            <article class="events_details">
-                <a href="./event.html">
-                    <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
-                    <h3 class="event_title_box">Annual Wonderland</h3>
-                    <ul>
-                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                    </ul>
-                </a>
-            </article>
-            <article class="events_details">
-                <a href="./event.html">
-                    <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
-                    <h3 class="event_title_box">Annual Wonderland</h3>
-                    <ul class="">
-                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                    </ul>
-                </a>
-            </article>
-            <article class="events_details">
-                <a href="./event.html">
-                    <div><img class="img_events" src="./media/images/events/gig_event.jpg" alt="concert_image"></div>
-                    <h3 class="event_title_box">Annual Wonderland</h3>
-                    <ul class="">
-                        <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                        <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                        <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                    </ul>
-                </a>
-            </article>
-        </section>
-
     </main>
 
     <footer class="flex_footer">
