--- a/src/event.html
+++ b/src/event.html
@@ -54,49 +54,50 @@
             </article>
         </section>
     </header>
-    <main class="margins">
-        <section class="flex_event">
-            <article class="rc_bkg">
-
-                <h3 class="event_title">Annual Wonderland</h3>
-            </article>
-            <article>
-                <div>
-                    <h3 class="home_title">Description</h3>
-                </div>
-                <div>
-                    <p class="margins">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tortor eu quam dignissim, et fringilla ante egestas. Aenean elementum elementum metus, eget condimentum eros finibus non. Proin finibus, ex eget ultrices egestas, augue neque egestas turpis, non imperdiet eros orci quis mauris. Donec eget vulputate mauris. Nullam faucibus consequat mattis. Duis vitae turpis a sem lobortis vestibulum at ac libero.
-                    </p>
-                </div>
-            </article>
-            <div>
-                <h3 class="home_title">Details</h3>
-            </div>
-            <article class="flex_details">
-                <div>
-                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/location_icon.png" alt="Location Icon"></div>
-                    <div class="div_inline"><h3 class="bottom_padding">Location: Barcelona</h3></div>
-                </div>
-                <div>
-                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/calendar_icon.png" alt="Location Icon"></div>
-                    <div class="div_inline"><h3>Dates: 10 Mar, 2022 - 12 Mar, 2022</h3></div>
-                </div>
-                <div>
-                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/group_icon.png" alt="Location Icon"></div>
-                    <div class="div_inline"><h3>Max. participants: 500</h3></div>
-                </div>
-                <div>
-                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/category_icon.png" alt="Location Icon"></div>
-                    <div class="div_inline"><h3>Category: music</h3></div>
-                </div>
-                <div>
-                    <div class="div_inline"><img class="details_icons" src="./media/images/icons/person_icon.png" alt="Location Icon"></div>
-                    <div class="div_inline"><h3>Creator: Luca</h3></div>
-                </div>
-            </article>
-            <article>
-                <h3 class="flex_details">Creator Score</h3>
+    <main>
+        <div class="rc_bkg flex_event">
+            <h3 class="event_title">Annual Wonderland</h3>
+        </div>
+        <div class="flex_event_row">
+            <section class="flex_event margins">
+                <article>
+                    <div>
+                        <h3 class="event_subtitle">Description</h3>
+                    </div>
+                    <div>
+                        <p class="event_description_size">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tortor eu quam dignissim, et fringilla ante egestas. Aenean elementum elementum metus, eget condimentum eros finibus non. Proin finibus, ex eget ultrices egestas, augue neque egestas turpis, non imperdiet eros orci quis mauris. Donec eget vulputate mauris. Nullam faucibus consequat mattis. Duis vitae turpis a sem lobortis vestibulum at ac libero.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <h3 class="event_subtitle">Details</h3>
+                </article>
+                <article class="flex_details flex_details_2">
+                    <div>
+                        <div class="div_inline"><img class="details_icons" src="./media/images/icons/location_icon.png" alt="Location Icon"></div>
+                        <div class="div_inline"><h3 class="bottom_padding">Location: Barcelona</h3></div>
+                    </div>
+                    <div>
+                        <div class="div_inline"><img class="details_icons" src="./media/images/icons/calendar_icon.png" alt="Location Icon"></div>
+                        <div class="div_inline"><h3>Dates: 10 Mar, 2022 - 12 Mar, 2022</h3></div>
+                    </div>
+                    <div>
+                        <div class="div_inline"><img class="details_icons" src="./media/images/icons/group_icon.png" alt="Location Icon"></div>
+                        <div class="div_inline"><h3>Max. participants: 500</h3></div>
+                    </div>
+                    <div>
+                        <div class="div_inline"><img class="details_icons" src="./media/images/icons/category_icon.png" alt="Location Icon"></div>
+                        <div class="div_inline"><h3>Category: music</h3></div>
+                    </div>
+                    <div>
+                        <div class="div_inline"><img class="details_icons" src="./media/images/icons/person_icon.png" alt="Location Icon"></div>
+                        <div class="div_inline"><h3>Creator: Luca</h3></div>
+                    </div>
+                </article>
+            </section>
+            <section class="flex_event">
+                <h3 class="bold">Creator Score</h3>
                 <div class="star-container bottom_margin">
                     <div class="star"></div>
                     <div class="star"></div>
@@ -104,12 +105,12 @@
                     <div class="star"></div>
                     <div class="star"></div>
                 </div>
-            </article>
-        </section>
-        <section class="event_buttons_margin">
-            <div class="event_buttons_participate"><a  href="./event.html">Participate!</a></div>
-            <div class="event_buttons"><a href="./event.html">Share!</a></div>
-        </section>
+            </section>
+            <section class="event_buttons_margin">
+                <div class="event_buttons_participate"><a  href="./event.html">Participate!</a></div>
+                <div class="event_buttons"><a href="./event.html">Share!</a></div>
+            </section>
+        </div>
     </main>
     <footer class="flex_footer">
         <section class="inlineNav">
