--- a/src/eventology.html
+++ b/src/eventology.html
@@ -2,9 +2,119 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OpenEvents</title>
+    <link rel="icon" type = "image/png" href="./media/images/oe_logo.jpg"/>
+    <link rel="reset" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style_mobile.css" />
+    <link rel="stylesheet" href="./css/style_desktop.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <!--360 x 740 (Samsung s8+) -->
 </head>
 <body>
-
+    <header>
+        <section class="flex_header margins">
+            <article>
+                <a href="./home.html"><h1 id="mainTitle">OpenEvents</h1></a>
+            </article>
+            <article>
+                <div>
+                    <nav>
+                        <a href="./search.html">
+                            <img
+                                src="./media/images/icons/search_icon.png"
+                                alt="search icon"
+                            />
+                        </a>
+                        <a href="./events.html">
+                            <img
+                                src="./media/images/icons/party_icon.png"
+                                alt="events icon"
+                            />
+                        </a>
+                        <a href="./friends.html">
+                            <img
+                                src="./media/images/icons/friends_icon.png"
+                                alt="friends icon"
+                            />
+                        </a>
+                        <a href="./profile.html">
+                            <img
+                                src="./media/images/icons/profile_icon.png"
+                                alt="profile icon"
+                            />
+                        </a>
+                        <a href="./index.html">
+                            <img
+                                src="./media/images/icons/logout_icon.png"
+                                alt="log out icon"
+                            />
+                        </a>
+                    </nav>
+                </div>
+            </article>
+        </section>
+    </header>
+    <main>
+        <div class="flex_event">
+            <h2>Eventology</h2>
+            <h3>TODAY: 6 Sep. 2022</h3>
+        </div>
+        <div class="time_line">
+            <div class="vl"></div>
+            <div class="eventology_content">
+                <article class="events_list">
+                    <div class="events_details">
+                        <a href="./event.html">
+                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
+                            <h3 class="event_title_box">Annual Wonderland</h3>
+                            <ul>
+                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                            </ul>
+                        </a>
+                    </div>
+                    <div class="events_details">
+                        <a href="./event.html">
+                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
+                            <h3 class="event_title_box">Annual Wonderland</h3>
+                            <ul>
+                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                            </ul>
+                        </a>
+                    </div>
+                    <div class="events_details">
+                        <a href="./event.html">
+                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
+                            <h3 class="event_title_box">Annual Wonderland</h3>
+                            <ul>
+                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
+                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
+                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
+                            </ul>
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </main>
+    <footer class="flex_footer">
+        <section class="inlineNav">
+            <div>
+                <h4 class="white">OpenEvents</h4>
+            </div>
+            <div>
+                <nav>
+                    <div><a href="./terms.html"><h5 class="white">Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5 class="white">Privacy Policy</h5></a></div>
+                </nav>
+            </div>
+        </section>
+        <div>
+            <h5 class="white">© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
+        </div>
+    </footer>
 </body>
 </html>
