--- a/src/events.html
+++ b/src/events.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-        <h2>Discover Events</h2>
+        <h2 class="home_title">Discover Events</h2>
         <section class="categories_buttons">
             <a href="./events.html">TRENDING</a>
             <a href="./events.html">MUSIC</a>
