--- a/src/profile.html
+++ b/src/profile.html
@@ -60,7 +60,7 @@
                 <div>
                     <h3 class="home_title">Personal Information</h3>
                 </div>
-                <div>
+                <div class="div_inline">
                     <div class="div_inline">
                         <img class="profile_round" src="./media/images/profileImg.jpg" alt="Profile Icon">
                     </div>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="flex_edit_buttons">
-                    <div>
+                    <div class="div_inline">
                         <div class="div_inline"><a href="./profile.html"><img class="edit_profile_img" src="./media/images/icons/edit_icon.png" alt="Edit Icon"></a></div>
                         <div class="div_inline"><a href="./profile.html"><h4 class="edit_profile_link">edit your information</h4></a></div>
                     </div>
