categories with colors class and food category

--- a/src/create_event.html
+++ b/src/create_event.html
@@ -78,6 +78,7 @@
                         <option value="3">Sports</option>
                         <option value="4">Games</option>
                         <option value="5">Travel</option>
+                        <option value="6">Food</option>
                         <option value="6">Other</option>
                     </select>
 
