--- a/src/events.html
+++ b/src/events.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="filters">
                     <a class="show_categories" href="./events.html">show more categories</a>
-                    <a  class="filters_icon" href="./profile.html">
+                    <a  class="filters_icon" href="./filter_events.html">
                         <img
                             src="./media/images/icons/settings_icon.png"
                             alt="settings icon"
@@ -88,8 +88,8 @@
             <article class="events_list">
                 <div class="events_details">
                     <a href="./event.html">
-                        <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
-                        <h3 class="event_title_box">Annual Wonderland</h3>
+                        <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="rollercoaster_image" width="450"></div>
+                        <h3 class="event_title_box category_travel">Annual Wonderland</h3>
                         <ul>
                             <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
                             <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
@@ -99,8 +99,8 @@
                 </div>
                 <div class="events_details">
                     <a href="./event.html">
-                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
-                        <h3 class="event_title_box">Eat Fest</h3>
+                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="food_image" width="450"></div>
+                        <h3 class="event_title_box category_food">Eat Fest</h3>
                         <ul class="">
                             <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
                             <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
@@ -111,7 +111,7 @@
                 <div class="events_details">
                     <a href="./event.html">
                         <div><img class="img_events" src="./media/images/events/gig_event.jpg" alt="concert_image"></div>
-                        <h3 class="event_title_box">NightMade music festival</h3>
+                        <h3 class="event_title_box category_music">NightMade music festival</h3>
                         <ul class="">
                             <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
                             <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 June, 2022</li>
@@ -121,23 +121,23 @@
                 </div>
                 <div class="events_details">
                     <a href="./event.html">
-                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
-                        <h3 class="event_title_box">Eat Fest</h3>
+                        <div><img class="img_events" src="./media/images/events/sports_event.jpg" alt="basket_image" width="450"></div>
+                        <h3 class="event_title_box category_sports">FightBall</h3>
                         <ul class="">
-                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
-                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
-                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 1000</li>
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Esplugues</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 May, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 100</li>
                         </ul>
                     </a>
                 </div>
                 <div class="events_details">
                     <a href="./event.html">
-                        <div><img class="img_events" src="./media/images/events/eating_event.jpg" alt="concert_image" width="450"></div>
-                        <h3 class="event_title_box">Eat Fest</h3>
+                        <div><img class="img_events" src="./media/images/events/games_event.jpg" alt="just_dance_image" width="450"></div>
+                        <h3 class="event_title_box category_games">Share your move</h3>
                         <ul class="">
-                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Castelldefels</li>
-                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 April, 2022</li>
-                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 1000</li>
+                            <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Lloret de Mar</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 24 June, 2022</li>
+                            <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 2000</li>
                         </ul>
                     </a>
                 </div>
