--- a/src/eventology.html
+++ b/src/eventology.html
@@ -59,45 +59,46 @@
             <h2>Eventology</h2>
             <h3>TODAY: 6 Sep. 2022</h3>
         </div>
-        <div class="time_line">
-            <div class="vl"></div>
-            <div class="eventology_content">
-                <article class="events_list">
-                    <div class="events_details">
-                        <a href="./event.html">
-                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
-                            <h3 class="event_title_box">Annual Wonderland</h3>
-                            <ul>
-                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                            </ul>
-                        </a>
-                    </div>
-                    <div class="events_details">
-                        <a href="./event.html">
-                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
-                            <h3 class="event_title_box">Annual Wonderland</h3>
-                            <ul>
-                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                            </ul>
-                        </a>
-                    </div>
-                    <div class="events_details">
-                        <a href="./event.html">
-                            <div><img class="img_events" src="./media/images/events/roller_coaster_event.jpg" alt="concert_image" width="450"></div>
-                            <h3 class="event_title_box">Annual Wonderland</h3>
-                            <ul>
-                                <li><img src="./media/images/icons/location_icon.png" alt=""> Location: Barcelona</li>
-                                <li><img src="./media/images/icons/calendar_icon.png" alt="">Start date: 10 Mar, 2022</li>
-                                <li><img src="./media/images/icons/group_icon.png" alt="">Max participants: 500</li>
-                            </ul>
-                        </a>
-                    </div>
-                </article>
-            </div>
+        <div>
+            <article class="flex_eventology">
+                <div class="eventology_icons"><a href="./eventology.html"><img src="./media/images/icons/left_icon.png" alt="Left icon"></a></div>
+                <div><h4 class="bold">MARCH 2022</h4></div>
+                <div class="eventology_icons"><a href="./eventology.html"><img src="./media/images/icons/right_icon.png" alt="Right icon"></a></div>
+            </article>
+            <article class="flex_eventology_events events_list eventology_list">
+                <div class="events_details eventology_details">
+                    <a href="./event.html">
+                        <h3 class="event_title_box category_music">Annual Wonderland</h3>
+                        <ul>
+                            <li><img src="./media/images/icons/party_icon.png" alt="Party icon">Description: Music Festival</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Started: 28 March 2022</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Ended: 30 March 2022</li>
+                        </ul>
+                    </a>
+                </div>
+                <img class="eventology_desktop_arrow" src="./media/images/icons/arrow_icon.png" alt="Arrow">
+                <div class="events_details eventology_details">
+                    <a href="./event.html">
+                        <h3 class="event_title_box category_food">Eat Fest</h3>
+                        <ul>
+                            <li><img src="./media/images/icons/party_icon.png" alt="Party icon">Description: Eating Festival</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Started: 21 March 2022</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Ended: 25 March 2022</li>
+                        </ul>
+                    </a>
+                </div>
+                <img class="eventology_desktop_arrow" src="./media/images/icons/arrow_icon.png" alt="Arrow">
+                <div class="events_details eventology_details">
+                    <a href="./event.html">
+                        <h3 class="event_title_box category_travel">NightMade Travel Festival</h3>
+                        <ul>
+                            <li><img src="./media/images/icons/party_icon.png" alt="Party icon">Description: Travel Festival</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Started: 1 March 2022</li>
+                            <li><img src="./media/images/icons/calendar_icon.png" alt="Calendar icon">Ended: 5 March 2022</li>
+                        </ul>
+                    </a>
+                </div>
+            </article>
         </div>
     </main>
     <footer class="flex_footer">
