--- a/src/delete.html
+++ b/src/delete.html
@@ -59,13 +59,13 @@
                 <h2>Tom Holland</h2>
             </article>
             <article>
-                <p>tom@openevents.com</p>
+                <p class="delete_size">tom@openevents.com</p>
             </article>
             <article>
-                <p>Are you sure you want to delete your account?</p>
+                <p class="delete_size">Are you sure you want to delete your account?</p>
             </article>
             <article>
-                <p>All your personal information will be deleted </p>
+                <p class="delete_size">All your personal information will be deleted </p>
             </article>
             <article>
                 <a href="./index.html"><h3 class="delete_profile_anyway">DELETE ANYWAY</h3></a>
