--- a/src/friends.html
+++ b/src/friends.html
@@ -59,16 +59,16 @@
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
-                        <div><h3 class="black">Luca</h3></div>
-                        <div><h3 class="black">luca@openevents.com</h3></div>
+                    <div class="friend_info">
+                        <h3 class="black">Luca</h3>
+                        <h3 class="black">luca@openevents.com</h3>
                     </div>
                 </article>
             </a>
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
+                    <div class="friend_info">
                         <div><h3 class="black">Luca</h3></div>
                         <div><h3 class="black">luca@openevents.com</h3></div>
                     </div>
@@ -80,7 +80,7 @@
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
+                    <div class="friend_info">
                         <div><h3 class="black">Luca</h3></div>
                         <div><h3 class="black">luca@openevents.com</h3></div>
                     </div>
@@ -89,7 +89,7 @@
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
+                    <div class="friend_info">
                         <div><h3 class="black">Luca</h3></div>
                         <div><h3 class="black">luca@openevents.com</h3></div>
                     </div>
@@ -98,7 +98,7 @@
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
+                    <div class="friend_info">
                         <div><h3 class="black">Luca</h3></div>
                         <div><h3 class="black">luca@openevents.com</h3></div>
                     </div>
@@ -107,7 +107,7 @@
             <a href="./friend.html">
                 <article class="friends_flex_info">
                     <div><img class="friends_profile_img" src="./media/images/profileImg.jpg" alt="Profile Icon"></div>
-                    <div>
+                    <div class="friend_info">
                         <div><h3 class="black">Luca</h3></div>
                         <div><h3 class="black">luca@openevents.com</h3></div>
                     </div>
