--- a/src/friend.html
+++ b/src/friend.html
@@ -74,21 +74,21 @@
             </div>
             <div class="friends_flex_info">
                 <div><img class="friends_profile_img" src="./media/images/events_bkg.jpg" alt="Profile Icon"></div>
-                <div>
+                <div class="friend_info">
                     <div><h3 class="black">Annual Wonderland</h3></div>
                     <div><h3 class="black">Rap, techno and twerk.</h3></div>
                 </div>
             </div>
             <div class="friends_flex_info">
                 <div><img class="friends_profile_img" src="./media/images/events_bkg.jpg" alt="Profile Icon"></div>
-                <div>
+                <div class="friend_info">
                     <div><h3 class="black">Annual Wonderland</h3></div>
                     <div><h3 class="black">Rap, techno and twerk.</h3></div>
                 </div>
             </div>
             <div class="friends_flex_info">
                 <div><img class="friends_profile_img" src="./media/images/events_bkg.jpg" alt="Profile Icon"></div>
-                <div>
+                <div class="friend_info">
                     <div><h3 class="black">Annual Wonderland</h3></div>
                     <div><h3 class="black">Rap, techno and twerk.</h3></div>
                 </div>
