--- a/src/html/events.html
+++ b/src/html/events.html
@@ -166,7 +166,6 @@
             </article>
         </section>
     </main>
-
     <footer class="flex_footer">
         <section class="inlineNav">
             <div>
@@ -174,8 +173,8 @@
             </div>
             <div>
                 <nav>
-                    <div><a class="white" href="terms.html"><h5>Terms of use</h5></a></div>
-                    <div><a class="white" href="privacy.html"><h5>Privacy Policy</h5></a></div>
+                    <div><a href="./terms.html"><h5 class="white">Terms of use</h5></a></div>
+                    <div><a href="./privacy.html"><h5 class="white">Privacy Policy</h5></a></div>
                 </nav>
             </div>
         </section>
