--- a/src/html/terms.html
+++ b/src/html/terms.html
@@ -68,7 +68,7 @@
             <div>
                 <nav>
                     <div><a href="./terms.html"><h5 class="white">Terms of use</h5></a></div>
-                    <div><a href="privacy.html"><h5 class="white">Privacy Policy</h5></a></div>
+                    <div><a href="./privacy.html"><h5 class="white">Privacy Policy</h5></a></div>
                 </nav>
             </div>
         </section>
