--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Made by Emma Tarazona and Fernando Porcel-->
     <meta charset="UTF-8">
     <title>OpenEvents</title>
     <link rel="icon" type = "image/png" href="./media/images/oe_logo.jpg"/>
@@ -37,12 +38,15 @@
             <article class="flex_signup">
                 <!--Form containing user inputs, wrapped together to send the information at the same time-->
                 <form class="input_box">
+                    <!--Text type for normal input without hiding or requirements-->
                     <input type="text" id="name" name="name" required
                            minlength="1" maxlength="50" size="10" placeholder="name" />
                     <input type="text" id="lastname" name="lastname" required
                            minlength="1" maxlength="50" size="10" placeholder="lastname" />
+                    <!--Email type for email input with some email restrictions-->
                     <input type="email" id="newMail" name="newMail"
                            minlength="11" maxlength="150" size="10" placeholder="e-mail" pattern="/^[a-zA-Z0-9.!#$%&amp;'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required />
+                    <!--Password type for hided input for passwords-->
                     <input type="password" id="newPassword" name="password" required
                            minlength="1" maxlength="15" size="10" placeholder="password" />
                     <button class="buttonSignUp" type="button" onclick="window.location.href='./home.html'">Sign up</button>
