- css (mobile and desktop) errors amended - events.html with explanation comments

--- a/src/html/filter_events.html
+++ b/src/html/filter_events.html
@@ -37,7 +37,7 @@
     <main class="margins_filter">
         <section class="filters_input">
             <label for="location">Chose the starting date:</label>
-            <input type="date" id="start_date" name="event_start" value="Today" min="2022-04-01">
+            <input type="date" id="start_date" name="event_start" min="2022-04-01">
 
             <label for="start_date">Choose the location:</label>
             <input type="text" id="location" name="location" required minlength="1" maxlength="30" placeholder="location" />
