--- a/src/html/search.html
+++ b/src/html/search.html
@@ -20,32 +20,32 @@
                 <nav>
                     <a href="./search.html">
                         <img
-                                src="../media/images/icons/search_icon.png"
-                                alt="search icon"
+                            src="../media/images/icons/search_icon.png"
+                            alt="search icon"
                         />
                     </a>
                     <a href="events.html">
                         <img
-                                src="../media/images/icons/party_icon.png"
-                                alt="events icon"
+                            src="../media/images/icons/party_icon.png"
+                            alt="events icon"
                         />
                     </a>
                     <a href="/src/html/friends.html">
                         <img
-                                src="../media/images/icons/friends_icon.png"
-                                alt="friends icon"
+                            src="../media/images/icons/friends_icon.png"
+                            alt="friends icon"
                         />
                     </a>
                     <a href="profile.html">
                         <img
-                                src="../media/images/icons/profile_icon.png"
-                                alt="profile icon"
+                            src="../media/images/icons/profile_icon.png"
+                            alt="profile icon"
                         />
                     </a>
                     <a href="index.html">
                         <img
-                                src="../media/images/icons/logout_icon.png"
-                                alt="log out icon"
+                            src="../media/images/icons/logout_icon.png"
+                            alt="log out icon"
                         />
                     </a>
                 </nav>
@@ -62,8 +62,8 @@
             </form>
         </article>
         <article class="searchText">
-            <h4>What are you looking for?</h4>
-            <h4>Find out events people or whatever</h4>
+            <h4>Hey! What are you looking for?</h4>
+            <h4>Find out events people or whatever :)r</h4>
         </article>
     </section>
 </main>
