--- a/src/html/events.html
+++ b/src/html/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="OpenEvents" content="OpenEvents allows you to interact with events and members of a community.">
     <title>OpenEvents</title>
     <link rel="icon" type = "image/png" href="../media/images/oe_logo.jpg"/>
     <link rel="reset" href="../css/reset.css"/>
@@ -57,7 +57,6 @@
             </article>
         </section>
     </header>
-
     <main>
         <!--h2 for the web's section title -->
         <h2 class="home_title">Discover Events</h2>
@@ -113,7 +112,7 @@
                     </div>
                     <!--Div that allows deleting the filters on desktop events' web page -->
                     <div class="filters_desktop delete_filters">
-                        <a href="filter_events.html">Delete filters</a>
+                        <a href="./filter_events.html">Delete filters</a>
                     </div>
                 </div>
                 <!--Div that displays the possibility of creating a new event -->
