--- a/src/html/search.html
+++ b/src/html/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="OpenEvents" content="OpenEvents allows you to interact with events and members of a community.">
     <title>OpenEvents</title>
     <link rel="icon" type = "image/png" href="../media/images/oe_logo.jpg"/>
     <link rel="reset" href="../css/reset.css"/>
